--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag "users" do %>
 <h1>New user</h1>
 
 <%= render "form", user: @user %>
@@ -7,3 +8,4 @@
 <div>
   <%= link_to "Back to users", users_path %>
 </div>
+<% end %>
