--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,12 +1,36 @@
 <div id="<%= dom_id user %>">
-  <p>
-    <strong>Code:</strong>
+  <div>
+    <%= label_tag :code %>
     <%= user.code %>
-  </p>
+  </div>
 
-  <p>
+  <div>
     <strong>Name:</strong>
     <%= user.name %>
-  </p>
+  </div>
+
+  <%= label_tag :strengths %>
+  <div class="overflow-x-auto">
+    <table class="table table-zebra">
+    <thead>
+      <tr>
+        <th><%= t("activerecord.attributes.user_strength.no") %></th>
+        <th><%= t("activerecord.attributes.user_strength.strength") %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <%- user.user_strengths.each do |user_strength| %>
+      <tr class="hover">
+        <th>
+          <%= user_strength.no %>
+        </th>
+        <td>
+          <%= user_strength.strength.name_ja %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+    </table>
+  </div>
 
 </div>
