--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,15 @@
 
 <h1>Users</h1>
 
-<% @users.each do |user| %>
-  <%= render user %>
-  <p>
-    <%= link_to "Show this user", user %>
-  </p>
+<%= turbo_frame_tag "posts_page_#{@users.current_page}" do %>
+  <%= render @users %>
+
+  <% if @users.next_page %>
+    <%= turbo_frame_tag "posts_page_#{@users.next_page}",
+      src: users_path(page: @users.next_page),
+      loading: :lazy
+    %>
+  <% end %>
 <% end %>
 
 <%= link_to "New user", new_user_path %>
