メニュー＆ハンバーガーメニューを追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,100 @@
 <header>
-  <%- if user_signed_in? %>
-    <%= link_to "#{current_user.name}さん", class: "link" %>
-    <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete } %>
-  <%- else %>
-    <%= button_to "Googleでログイン", user_google_oauth2_omniauth_authorize_path, method: :post, data: {turbo: "false"} %>
-  <%- end %>
+  <div class="navbar bg-base-100">
+    <div class="flex-1">
+      <%= link_to Settings.system[:title], root_path, class: "btn btn-ghost normal-case text-xl" %>
+    </div>
+    <div class="hidden md:flex">
+      <ul class="menu menu-horizontal px-1">
+        <li>
+          <details>
+            <summary>
+              <%= t('menu.list') %>
+            </summary>
+            <ul class="bg-base-100 rounded-t-none p-2">
+              <li>
+                <%= link_to t('menu.user'), users_path, class: "link link-hover" %>
+              </li>
+              <li>
+                <%= link_to t('menu.articles'), articles_path, class: "link link-hover" %>
+              </li>
+            </ul>
+          </details>
+        </li>
+        <li>
+          <details>
+            <summary>
+              <%= t('menu.static_pages.info') %>
+            </summary>
+            <ul class="bg-base-100 rounded-t-none p-2">
+              <li>
+                <%= link_to t('menu.static_pages.info'), static_pages_info_path, class: "link link-hover" %>
+              </li>
+              <li>
+                <%= link_to t('menu.static_pages.privacy'), static_pages_privacy_path, class: "link link-hover" %>
+              </li>
+              <li>
+                <%= link_to t('menu.static_pages.terms'), static_pages_terms_path, class: "link link-hover" %>
+              </li>
+              <li>
+                <%= link_to t('menu.static_pages.faq'), static_pages_faq_path, class: "link link-hover" %>
+              </li>
+            </ul>
+          </details>
+        </li>
+        <li class="p-2 bg-base-100">
+        <%- if user_signed_in? %>
+          <details>
+            <summary>
+              <%= image_tag current_user.image || "default.png", title: "#{current_user.name}さん", class: "rounded-full w-10" %>
+            </summary>
+            <ul class="p-2 bg-base-100 right-0">
+              <li>
+                <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete } %>
+              </li>
+            </ul>
+          </details>
+        <%- else %>
+          <%= button_to "Googleでログイン", user_google_oauth2_omniauth_authorize_path, method: :post, data: {turbo: "false"} %>
+        <%- end %>
+        </li>
+      </ul>
+    </div>
+    <div class="flex md:hidden">
+      <nav>
+        <button id="menuBtn" type="button" class="fixed top-3 right-4 z-20 flex h-14 w-14 items-center justify-center rounded-md border-none text-white md:hidden">
+          <span id="menuIconBars">
+            <i class="fa-solid fa-bars fa-2x"></i>
+          </span>
+          <span id="menuIconX" class="hidden">
+            <i class="fa-solid fa-xmark fa-2x"></i>
+          </span>
+        </button>
+        <ul id="menu" class="z-10 fixed top-0 left-0 z-0 flex w-full flex-col bg-blue-500 text-center font-bold text-white transition-all ease-linear md:static md:w-full md:translate-x-0 md:flex-row md:place-items-center md:bg-white md:text-black translate-x-full">
+          <li class="p-3">
+            <%= link_to t('menu.user'), users_path, class: "link link-hover" %>
+          </li>
+          <li class="p-3">
+            <%= link_to t('menu.articles'), articles_path, class: "link link-hover" %>
+          </li>
+          <li class="p-3">
+          <%- if user_signed_in? %>
+            <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete } %>
+          <%- else %>
+            <%= button_to "Googleでログイン", user_google_oauth2_omniauth_authorize_path, method: :post, data: {turbo: "false"} %>
+          <%- end %>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </header>
+<script>
+      menuBtn.addEventListener('click', () => {
+        // クリックした時に、"translate-x-full"を追加、削除する。
+        // "translate-x-full"が追加されると
+        // menuが画面の外に位置するので非表示となる。
+        menu.classList.toggle('translate-x-full');
+        menuIconBars.classList.toggle('hidden');
+        menuIconX.classList.toggle('hidden');
+      });
+    </script>
