TOPのログインボタンをとりあえず修正

--- a/app/views/portals/index.html.erb
+++ b/app/views/portals/index.html.erb
@@ -45,7 +45,8 @@
     <p style="margin-bottom: 1.2rem">ストレングスファインダーの資質に関する<span class="highlight">「あるある」を投稿する</span>ためのサービスです。</p>
     <div class="flex justify-center">
       <% unless user_signed_in? %>
-        <%= link_to 'さっそく登録/ログインする！', user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary btn-width50-center" %>
+        <%= link_to 'さっそく登録/ログインする！(Google)', user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary btn-width50-center" %>
+        <%= link_to 'さっそく登録/ログインする！(X)', user_twitter_omniauth_authorize_path, class: "btn btn-primary btn-width50-center" %>
       <% end %>
     </div>
     <div class="flex justify-center">
@@ -85,7 +86,10 @@
       <li>誰かのあるあるを見ることで、<span class="highlight">新しい発見につながるかも</span>しれません。</li>
     </ul>
   </div>
-  <% unless user_signed_in? %>
-    <%= link_to 'さっそく登録/ログインする！', user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary btn-width50-center" %>
-  <% end %>
+    <div class="flex justify-center">
+      <% unless user_signed_in? %>
+        <%= link_to 'さっそく登録/ログインする！(Google)', user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary btn-width50-center" %>
+        <%= link_to 'さっそく登録/ログインする！(X)', user_twitter_omniauth_authorize_path, class: "btn btn-primary btn-width50-center" %>
+      <% end %>
+    </div>
 </div>
