ログインしていない人も記事は登録できるようにする Fixes #24

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
   <body>
     <%= render 'layouts/header' %>
     <main class="container">
+      <%= render 'layouts/flash_messages' %>
       <%= yield %>
     </main>
     <%= render 'layouts/footer' %>
