--- a/app/views/portals/index.html.erb
+++ b/app/views/portals/index.html.erb
@@ -25,7 +25,7 @@
           <div class="flex flex-row p-1">
             <div class="flex flex-col">
               <div class="article-owner text-xs">
-                <%= "投稿者：#{article.creator.name}さん" %>
+                <%= "投稿者：#{article.creator_name}さん" %>
               </div>
               <div class="article-created text-xs">
                 <%= "投稿日：#{ l article.created_at}" %>
