--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -10,8 +10,13 @@
   </p>
 
   <p>
+    <strong>Secret:</strong>
+    <%= article.secret %>
+  </p>
+
+  <p>
     <strong>User:</strong>
-    <%= article.creator.name %>
+    <%= article.creator_name %>
   </p>
 
 </div>
