--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div>
+    <%= form.label :secret, style: "display: block" %>
+    <%= form.check_box :secret %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
