--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -10,8 +10,8 @@
   </p>
 
   <p>
-    <strong>Secret:</strong>
-    <%= article.secret %>
+    <strong>Open:</strong>
+    <%= article.open %>
   </p>
 
   <p>
