--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div>
-    <%= form.label :secret, style: "display: block" %>
-    <%= form.check_box :secret %>
+    <%= form.label :open, style: "display: block" %>
+    <%= form.check_box :open %>
   </div>
 
   <div>
