ログインしていない人も記事は登録できるようにする (#25)
* ログインしていない人も記事は登録できるようにする
Fixes #24

* noticeの表示がダブっているので削除

* ログイン制御を設定

* Devise画面をカスタマイズして無効化

* SSOログインボタンを修正

* 記事の登録はログインしなくても出来るようにする

* 記事に公開(秘密)フラグを追加

* secretをopenに変更

* ログインしている状態でなければ、公開フラグを編集出来なくする

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -10,8 +10,13 @@
   </p>
 
   <p>
+    <strong>Open:</strong>
+    <%= article.open %>
+  </p>
+
+  <p>
     <strong>User:</strong>
-    <%= article.creator.name %>
+    <%= article.creator_name %>
   </p>
 
 </div>
