--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,12 +1,12 @@
-<% content_for :title, "Editing article" %>
+<% content_for :title, t(".title") %>
 
-<h1>Editing article</h1>
+<h1><%= t(".title") %></h1>
 
 <%= render "form", article: @article %>
 
 <br>
 
 <div>
-  <%= link_to "Show this article", @article %> |
-  <%= link_to "Back to articles", articles_path %>
+  <%= link_to t("btn.show"), @article, class: "btn btn-primary rounded-md" %>
+  <%= link_to t("btn.back"), articles_path, class: "btn btn-primary rounded-md" %>
 </div>
