--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,16 @@
-<% content_for :title, "Articles" %>
+<% content_for :title, t('.title') %>
 
-<h1>Articles</h1>
+<h1><%= t('.title') %></h1>
 
-<div id="articles">
-  <% @articles.each do |article| %>
-    <%= render article %>
-    <p>
-      <%= link_to "Show this article", article %>
-    </p>
+<%= link_to t('btn.new'), new_article_path, class: "btn btn-primary rounded-md" %>
+
+<%= turbo_frame_tag "posts_page_#{@articles.current_page}" do %>
+  <%= render partial: "article_list", collection: @articles, as: "article" %>
+
+  <% if @articles.next_page %>
+    <%= turbo_frame_tag "posts_page_#{@articles.next_page}",
+      src: articles_path(page: @articles.next_page),
+      loading: :lazy
+    %>
   <% end %>
-</div>
-
-<%= link_to "New article", new_article_path %>
+<% end %>
