--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,12 @@
-<h1>Editing user</h1>
+<% content_for :title, t(".title") %>
+
+<h1><%= t(".title") %></h1>
 
 <%= render "form", user: @user %>
 
 <br>
 
 <div>
-  <%= link_to "Show this user", @user %> |
-  <%= link_to "Back to users", users_path %>
+  <%= link_to t("btn.show"), @user, class: "btn btn-primary rounded-md" %>
+  <%= link_to t("btn.back"), users_path, class: "btn btn-primary rounded-md" %>
 </div>
