--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "Users" %>
+<% content_for :title, t('.title') %>
 
-<h1>Users</h1>
+<h1><%= t('.title') %></h1>
 
 <%= turbo_frame_tag "posts_page_#{@users.current_page}" do %>
   <%= render @users %>
