--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Users</h1>
+<% content_for :title, t('.title') %>
+
+<h1><%= t('.title') %></h1>
 
 <%= turbo_frame_tag "posts_page_#{@users.current_page}" do %>
   <%= render @users %>
