--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :content, style: "display: block" %>
-    <%= form.text_area :content, class: "textarea textarea-bordered" %>
+    <%= form.rich_text_area :content, class: "textarea textarea-bordered" %>
   </div>
 
   <% if user_signed_in? %>
